--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
-        "tailwindcss": "^3.4.13",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.3",
+        "laravel-mix": "^6.0.49",
+        "sass": "^1.82.0",
+        "sass-loader": "^16.0.4"
     }
 }
