--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     },
     "dependencies": {
         "bootstrap": "^5.3.3",
+        "jquery": "^3.6.0",
         "laravel-mix": "^6.0.49",
         "sass": "^1.82.0",
-        "sass-loader": "^16.0.4"
+        "sass-loader": "^16.0.4",
+        "toastr": "^2.1.4"
     }
 }
